--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="cube_data.hpp">
       <Filter>Header Files\sdlxvulkan</Filter>
     </ClInclude>
+    <ClInclude Include="instance.hpp">
+      <Filter>Header Files\sdlxvulkan</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="shaders\shader.vert">
