Vulkan function pointer holders
Now have 3 distinct components for Vulkan functions: Global_Functions,
Instance_Functions and Device_Functions. All assert the function
pointers were initialised correctly before use and share the name
completely with the functions they wrap. Now we don't have to worry
about where the Vulkan functions come from if we use SDL.

--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
@@ -42,10 +42,16 @@
     <ClCompile Include="debug_callback.cpp">
       <Filter>Source Files\sdlxvulkan</Filter>
     </ClCompile>
-    <ClCompile Include="functions.cpp">
+    <ClCompile Include="physical_device.cpp">
       <Filter>Source Files\sdlxvulkan</Filter>
     </ClCompile>
-    <ClCompile Include="physical_device.cpp">
+    <ClCompile Include="global_functions.cpp">
+      <Filter>Source Files\sdlxvulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="instance_functions.cpp">
+      <Filter>Source Files\sdlxvulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="device_functions.cpp">
       <Filter>Source Files\sdlxvulkan</Filter>
     </ClCompile>
   </ItemGroup>
@@ -80,7 +86,13 @@
     <ClInclude Include="system.hpp">
       <Filter>Header Files\sdlxvulkan</Filter>
     </ClInclude>
-    <ClInclude Include="functions.hpp">
+    <ClInclude Include="global_functions.hpp">
+      <Filter>Header Files\sdlxvulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="instance_functions.hpp">
+      <Filter>Header Files\sdlxvulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="device_functions.hpp">
       <Filter>Header Files\sdlxvulkan</Filter>
     </ClInclude>
   </ItemGroup>
