--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -21,8 +21,10 @@
   <ItemGroup>
     <ClCompile Include="application.cpp" />
     <ClCompile Include="debug_callback.cpp" />
-    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="device_functions.cpp" />
+    <ClCompile Include="global_functions.cpp" />
     <ClCompile Include="instance.cpp" />
+    <ClCompile Include="instance_functions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="physical_device.cpp" />
     <ClCompile Include="surface.cpp" />
@@ -32,10 +34,12 @@
   <ItemGroup>
     <ClInclude Include="application.hpp" />
     <ClInclude Include="debug_callback.hpp" />
+    <ClInclude Include="device_functions.hpp" />
     <ClInclude Include="event_string.hpp" />
-    <ClInclude Include="functions.hpp" />
+    <ClInclude Include="global_functions.hpp" />
     <ClInclude Include="handle.hpp" />
     <ClInclude Include="instance.hpp" />
+    <ClInclude Include="instance_functions.hpp" />
     <ClInclude Include="physical_device.hpp" />
     <ClInclude Include="result.hpp" />
     <ClInclude Include="surface.hpp" />
