--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -21,12 +21,14 @@
   <ItemGroup>
     <ClCompile Include="application.cpp" />
     <ClCompile Include="debug_callback.cpp" />
+    <ClCompile Include="device.cpp" />
     <ClCompile Include="device_functions.cpp" />
     <ClCompile Include="global_functions.cpp" />
     <ClCompile Include="instance.cpp" />
     <ClCompile Include="instance_functions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="physical_device.cpp" />
+    <ClCompile Include="queue.cpp" />
     <ClCompile Include="surface.cpp" />
     <ClCompile Include="system.cpp" />
     <ClCompile Include="window.cpp" />
@@ -34,6 +36,7 @@
   <ItemGroup>
     <ClInclude Include="application.hpp" />
     <ClInclude Include="debug_callback.hpp" />
+    <ClInclude Include="device.hpp" />
     <ClInclude Include="device_functions.hpp" />
     <ClInclude Include="event_string.hpp" />
     <ClInclude Include="global_functions.hpp" />
@@ -41,6 +44,7 @@
     <ClInclude Include="instance.hpp" />
     <ClInclude Include="instance_functions.hpp" />
     <ClInclude Include="physical_device.hpp" />
+    <ClInclude Include="queue.hpp" />
     <ClInclude Include="result.hpp" />
     <ClInclude Include="surface.hpp" />
     <ClInclude Include="system.hpp" />
