Command Pool and Buffer stuff
Turns out VkCommandBuffer usage is quite complicated...there's lots of
specific use that requires specific construction. Seems like a candidate
for multiple classes, which means we need a better abstraction of the
underlying Vulkan handles. Figure that out next.

--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="command_buffer.cpp" />
+    <ClCompile Include="command_pool.cpp" />
     <ClCompile Include="debug_callback.cpp" />
     <ClCompile Include="device.cpp" />
     <ClCompile Include="device_functions.cpp" />
@@ -35,6 +37,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.hpp" />
+    <ClInclude Include="command_buffer.hpp" />
+    <ClInclude Include="command_pool.hpp" />
     <ClInclude Include="debug_callback.hpp" />
     <ClInclude Include="device.hpp" />
     <ClInclude Include="device_functions.hpp" />
