--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -52,6 +52,7 @@
     <ClInclude Include="result.hpp" />
     <ClInclude Include="surface.hpp" />
     <ClInclude Include="system.hpp" />
+    <ClInclude Include="vulkan_ptr.hpp" />
     <ClInclude Include="window.hpp" />
   </ItemGroup>
   <ItemGroup>
