--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClInclude Include="command_buffer.hpp">
       <Filter>Header Files\sdlxvulkan</Filter>
     </ClInclude>
+    <ClInclude Include="vulkan_ptr.hpp">
+      <Filter>Header Files\sdlxvulkan</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="shaders\shader.vert">
