Handle cleanup and use
Decided against having a typedef for every handle type, mostly to make
it more clear that it isn't doing anything special and freeing the names
up for actual complicated classes (e.g. a Swapchain class that manages
everything it needs to itself). Also moved the current implementation
over to using the handles.

--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -22,10 +22,12 @@
     <ClCompile Include="application.cpp" />
     <ClCompile Include="device_functions.cpp" />
     <ClCompile Include="global_functions.cpp" />
+    <ClCompile Include="app_make.cpp" />
     <ClCompile Include="instance_functions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="system.cpp" />
     <ClCompile Include="handles.cpp" />
+    <ClCompile Include="vulkan_io.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -33,10 +35,12 @@
     <ClInclude Include="device_functions.hpp" />
     <ClInclude Include="event_string.hpp" />
     <ClInclude Include="global_functions.hpp" />
+    <ClInclude Include="app_make.hpp" />
     <ClInclude Include="instance_functions.hpp" />
     <ClInclude Include="result.hpp" />
     <ClInclude Include="system.hpp" />
     <ClInclude Include="handles.hpp" />
+    <ClInclude Include="vulkan_io.hpp" />
     <ClInclude Include="window.hpp" />
   </ItemGroup>
   <ItemGroup>
