--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="app_files.cpp" />
     <ClCompile Include="device_functions.cpp" />
     <ClCompile Include="global_functions.cpp" />
     <ClCompile Include="app_make.cpp" />
@@ -32,6 +33,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.hpp" />
+    <ClInclude Include="app_files.hpp" />
     <ClInclude Include="device_functions.hpp" />
     <ClInclude Include="event_string.hpp" />
     <ClInclude Include="global_functions.hpp" />
@@ -140,7 +142,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm;D:\Programming\stb</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>D:\Programming\SDL2-2.0.8\lib\x64;C:\VulkanSDK\1.1.73.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -149,7 +151,8 @@
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d  "D:\Programming\SDL2-2.0.8\lib\x64\SDL2.dll" $(TargetDir)
-xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)</Command>
+xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)
+xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copy the SDL x64 dll and shaders to the build directory</Message>
@@ -192,7 +195,7 @@ xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm;D:\Programming\stb</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -203,7 +206,8 @@ xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)</Command>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d  "D:\Programming\SDL2-2.0.8\lib\x64\SDL2.dll" $(TargetDir)
-xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)</Command>
+xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)
+xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copy the SDL x64 dll and shaders to the build directory</Message>
