--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj
@@ -46,25 +46,25 @@
     <ClInclude Include="window.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="shaders\shader.vert">
+    <CustomBuild Include="shaders\example.vert">
       <FileType>Document</FileType>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\shader.vert.spv $(ProjectDir)\shaders\shader.vert </Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling vertex shader</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)\shaders\shader.vert.spv</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\shader.vert.spv $(ProjectDir)\shaders\shader.vert </Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compiling vertex shader</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)\shaders\shader.vert.spv</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\example.vert.spv $(ProjectDir)\shaders\example.vert </Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling example.vert</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)\shaders\example.vert.spv</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\example.vert.spv $(ProjectDir)\shaders\example.vert </Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compiling example.vert</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)\shaders\example.vert.spv</Outputs>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="shaders\shader.frag">
+    <CustomBuild Include="shaders\example.frag">
       <FileType>Document</FileType>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\shader.frag.spv $(ProjectDir)\shaders\shader.frag </Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling fragment shader</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)\shaders\shader.frag.spv</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\shader.frag.spv $(ProjectDir)\shaders\shader.frag </Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compiling fragment shader</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)\shaders\shader.frag.spv</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\example.frag.spv $(ProjectDir)\shaders\example.frag </Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling example.frag</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)\shaders\example.frag.spv</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">glslangValidator.exe -V -o $(ProjectDir)\shaders\example.frag.spv $(ProjectDir)\shaders\example.frag </Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compiling example.frag</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)\shaders\example.frag.spv</Outputs>
     </CustomBuild>
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -142,7 +142,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm;D:\Programming\stb</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm;D:\Programming\stb;D:\Programming\tinyobjloader</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>D:\Programming\SDL2-2.0.8\lib\x64;C:\VulkanSDK\1.1.73.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -151,11 +151,11 @@
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d  "D:\Programming\SDL2-2.0.8\lib\x64\SDL2.dll" $(TargetDir)
-xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)
-xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)</Command>
+xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)shaders\
+xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)textures\</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Message>Copy the SDL x64 dll and shaders to the build directory</Message>
+      <Message>Copying supporting files to the build directory</Message>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>
@@ -195,7 +195,7 @@ xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm;D:\Programming\stb</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Programming\SDL2-2.0.8\include;C:\VulkanSDK\1.1.73.0\Include;D:\Programming\glm-0.9.9.0\glm;D:\Programming\stb;D:\Programming\tinyobjloader</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -206,11 +206,11 @@ xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)</Command>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d  "D:\Programming\SDL2-2.0.8\lib\x64\SDL2.dll" $(TargetDir)
-xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)
-xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)</Command>
+xcopy /y /d  "$(ProjectDir)shaders\*.spv" $(TargetDir)shaders\
+xcopy /y /d  "$(ProjectDir)textures\*" $(TargetDir)textures\</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Message>Copy the SDL x64 dll and shaders to the build directory</Message>
+      <Message>Copying supporting files to the build directory</Message>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>
