--- a/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
+++ b/SDL_Vulkan_Test/SDL_Vulkan_Test.vcxproj.filters
@@ -94,10 +94,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="shaders\shader.vert">
+    <CustomBuild Include="shaders\example.frag">
       <Filter>Source Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="shaders\shader.frag">
+    <CustomBuild Include="shaders\example.vert">
       <Filter>Source Files</Filter>
     </CustomBuild>
   </ItemGroup>
